<resources>
    <string name="app_name">NCERT Books, Chapter-Wise Solutions and Notes 6th - 12th Offline</string>

    <!-- Navigation Drawer menu labels -->
    <string name="quiz">Quiz</string>
    <string name="share_app">Share</string>
    <string name="invite">Invite</string>
    <string name="string_saved_resources">Saved Resources</string>
    <string name="rate_app">Rate App</string>
    <string name="title_about_us">About Us</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="settings">Settings</string>
    <string name="welcome_text">Welcome to your Online School</string>
    <string name="study_material">Study Materials</string>

    <string name="app_id">ca-app-pub-9962192841456948~7213251824</string>
    <string name="native_ad_unit_id">ca-app-pub-9962192841456948/4311756314</string>
    <string name="banner_ad_unit_id">ca-app-pub-9962192841456948/3109911745</string>
    <string name="interstitial_ad_unit_ad">ca-app-pub-9962192841456948/3620600523</string>

    <string-array name="nav_item_activity_titles">
        <item>Quiz</item>
        <item>Share App</item>
        <item>Invite</item>
        <item>My Bookmarks</item>
        <item>Rate App</item>
        <item>About Us</item>
        <item>Privacy Policy</item>
        <item>Settings</item>
    </string-array>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="search">search</string>

    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ncert_book">NCERT Book</string>
    <string name="title_standard">"Choose Your Class"</string>
    <string name="title_subject">"Choose Your Subject"</string>
    <string name="title_communicate">Communicate</string>

    <string name="title_activity_privacy_policy">PrivacyPolicyActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="terms_of_usage">
By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms, you may not access the service of this app

\n\n\t\t1. Our Service allows you to watch, read, Download, share and otherwise make available certain information, text, graphics, videos, or other content. Our Service (Android App) may contain links, text, pdfs to third-party websites or contents that are not owned or controlled by NCERT Books, Chapter-Wise Solutions and Notes 6th - 12th Offline

\n\n\t\t2. NCERT Books, Chapter-Wise Solutions and Notes 6th - 12th Offline has no control over and assumes no responsibility for the content, services, or practices of any third-party websites, texts, pdfs, or services

\n\n\t\t3. You further acknowledge and agree that NCERT Books, Chapter-Wise Solutions and Notes 6th - 12th Offline shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with the use of or reliance on any such content, goods or services available on or through any such web sites or services.
\n\nWe reserve the right, at our sole discretion, to modify or replace these Terms at any point of time. If a revision is a material, we will try to provide at least 3 days’ notice prior to any new terms taking effect. What constitutes a material change will be determined at our sole discretion.
\n\nIf you have any query, complain, suggestion or questions about the Terms, feel free to contact us at logicalpapers@gmail.com</string>

    <string name="privacy_policy">We would like to inform you that your Personal Information is solely used only for providing and improving the application and user experience. The data is neither outsourced nor used for any personal use. By using the android application, you agree to the collection and use of information in accordance with this policy.</string>

    <string name="info_collection">While using our android application, we may ask you to provide us with certain personally identifiable information that can be used to contact or identity you. Personally Identifiable information may include your name, E-mail or mentioned otherwise.\n\nIn addition, we may use third party services such as Google Analytics that collect, monitor and analyze the data sent to and fro our website. We are also using the services of Google Adsense for the generation of revenue through the ads of your interest and pleasure.\n\nWe may use your Personal Information to contact you with newsletters, marketing or promotional materials and other information that will solely be used for your better experience.</string>

    <string name="security">The security of your Personal Information is important to us, but remember that no method of transmission over the internet, or method of electronic storage, is 100% secure. While we strive to use commercially acceptable means to protect your Personal Information, we cannot guarantee its absolute your Personal, we cannot guarantee its absolute security.</string>

    <string name="changes">This Privacy Policy is effective as of 2019 and will remain in effect except with respect to any changes in its provisions in the future, which will be in effect after being posted on this page.\n\nWe reserve the right to update or change our Privacy Policy at any time and you should check this Privacy Policy periodically. Your continued use of the Service or android app after we post any modifications to the Privacy Policy on this page will constitute your acknowledgement of the modification and your consent to abide and be bound by the modified Privacy Policy.</string>

    <string name="about_us">\t\tNCERT Books, Chapter-Wise Solutions and Notes 6th - 12th Offline is an initiative of our team (logicalpaper.co) to provide free study material to all the school students of various boards like CBSE Board, ICSE/ISC Board, Delhi Board and Tamil State Board. NCERT Books, Chapter-Wise Solutions and Notes 6th - 12th Offline is developed to help the students in all possible ways. NCERT Books, Chapter-Wise Solutions and Notes 6th - 12th Offline provides the following books for CBSE and other boards students like NCERT Books, NCERT Solution, NCERT Notes, exemplary books, etc.\n\n\t\tNCERT Books, Chapter-Wise Solutions and Notes 6th - 12th Offline is designed in such a simplified way that any student of any class, be it of class 12th or 6th, can easily use this application. NCERT Books, Chapter-Wise Solutions and Notes 6th - 12th Offline provides all the important study material to students which could play vital role in their examination and helps them in scoring their best. NCERT Books, Chapter-Wise Solutions and Notes 6th - 12th Offline comes with a lot of necessary resources for most of the boardData students like Sample Papers, Past Year Papers, Blueprint, Guess Paper and Marking Scheme for class 9th, 10th, 11th and 12th. For boardData classes like CBSE 10th and CBSE 12th we have also provided the boardData topper’s answer sheet which is released by the examination boardData after the result declaration.\n\n\t\tIf you have any query, suggestion or complain contact us at prepskoolacademy@gmail.com </string>
    <string name="string_login">Login</string>
    <string name="string_email">Email</string>
    <string name="string_password">Password</string>
    <string name="string_register">Register</string>
    <string name="string_name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="string_reset_password">Reset Password</string>
    <string name="string_send_otp">Send OTP</string>
    <string name="string_login_instead">Login Instead?</string>
    <string name="string_create_account">Create Account</string>
    <string name="string_pay">PAY</string>
    <string name="string_number">Phone Number</string>
    <string name="string_amount">Amount</string>
    <string name="string_hint_resource">Resource Name</string>
    <string name="string_resource_price">Resource Price</string>
    <string name="string_phone">Phone</string>
    <string name="string_resource_encryption_password">PrEpSkOoL</string>
    <string name="string_sign_up">Sign Up</string>
    <string name="string_skip">Skip</string>
    <string name="string_sign_in_instead"><font color='blue'>Already Have an account?</font> <b><font color='purple'>Sign In</font></b></string>
    <string name="string_register_instead"><font color='blue'>New User?</font> <b><font color='purple'>Create Account</font></b></string>

</resources>
