<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".PaymentActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/lbl_resource_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:hint="@string/string_hint_resource"
        android:textStyle="bold"
        android:textSize="@dimen/dimen_20dp" />

    <TextView
        android:id="@+id/lbl_resource_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:fontFamily="monospace"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:hint="@string/string_resource_price"
        android:textSize="@dimen/dimen_18dp" />

    <Button
        android:id="@+id/btn_pay"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginStart="@dimen/dimen_50dp"
        android:layout_marginEnd="@dimen/dimen_50dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:text="@string/string_pay"
        android:textSize="20sp"
        android:onClick="startPayment"
        />

</LinearLayout>