<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activities.PrivacyPolicyActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Terms of Usage"
                android:textStyle="bold"
                android:padding="10dp"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:text="@string/terms_of_usage"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Privacy Policy"
                android:textStyle="bold"
                android:padding="10dp"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:text="@string/privacy_policy"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Information Collection and Usage"
                android:textStyle="bold"
                android:padding="10dp"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:text="@string/info_collection"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Security"
                android:textStyle="bold"
                android:padding="10dp"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:text="@string/security" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Changes to Privacy Policy"
                android:textStyle="bold"
                android:padding="10dp"
                android:textSize="19sp"
                android:layout_marginTop="10dp"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="18sp"
                android:text="@string/changes" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
